# unused-ips-file-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
.rpm/: available-ips-scanner.spec
src/: main.rs
src/utils/: cli.rs  file-creator.rs  mod.rs
