[package]
name = "unused-ips-file-generator"
version = "0.1.0"
edition = "2024"
description = "cli tool to scan ip ranges and write used/unused ips in files seperately"

[[bin]]
name = "available-ips-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4.5, <5.0", features = ["derive"] }
rayon = ">=1.10, <2.0"
