[package]
name = "available-ips-scanner"
version = "0.1.0"
edition = "2025"
authors = ["Alireza Aliabadi <alireza.aliabadi.dev@gmail.com>"]
license = "MIT OR Apache‑2.0"
description = "cli tool to scan ip ranges and write used/unused ips in files seperately"
readme = "README.md"

[[bin]]
name = "available-ips-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4.5, <5.0", features = ["derive"] }
rayon = ">=1.10, <2.0"